<resources>
    <string name="app_name">Focus</string>

    <!--    LoginFragment strings-->
    <string name="login_registerText">You don\'t have an account yet? Sign up</string>
    <string name="login_passwordHint">Password</string>
    <string name="login_emailHint">E-mail</string>
    <string name="login_signInButtonText">Sign in</string>
    <string name="login_tittle">¡Welcome!</string>
    <string name="login_subtittle">Start organizing your study form</string>

    <!--    RegisterFragment strings-->
    <string name="register_goBackText">Go back</string>
    <string name="register_tittle">Hello!</string>
    <string name="register_subtittle">Welcome to the family of</string>
    <string name="register_userHint">Username</string>
    <string name="register_emailHint">E-mail</string>
    <string name="register_passwordHint">Password</string>
    <string name="register_confirmPasswordHint">Confirm password</string>
    <string name="register_buttonSignInText">Sign in</string>
    <string name="register_buttonCreateUser">Create user</string>


    <!--    Undo event button-->
    <string name="undoDelete">Event deleted.</string>
    <string name="undo">Undo</string>


    <string name="studyOrganicerList_NoEvents">Don\'t have events to show</string>


    <string name="Register_hint_email">email</string>
    <string name="Register_hint_username">Username</string>
    <string name="Register_hint_password">Password</string>
    <string name="Register_hint_confirmPassword">Confirm password</string>
    <string name="loadingData">Loading data, please wait...</string>
    <string name="subjectlist_deleteditem">has been deleted</string>
    <string name="subjectlist_undotext">Restore the subject</string>
    <string name="subjectlist_undobuttontext">UNDO</string>
    <string name="subjectlist_restoreditem">has been successfully restored</string>
    <string name="login_err_wrongLoginText">email or password entered is incorrect . please check</string>
    <string name="login_err_dontExistEmail">These email dont exist, please do a new acount</string>
    <string name="login_err_unknow">Unknow error, contact with the dev</string>
    <string name="sharedUserDataLogin" translatable="false">sharedUserData</string>


    <!--    Not translated-->
    <string name="errDuplicateEmail">This email is in use, try another diferent or recover the password</string>
    <string name="errNotMatchPass">Passwords do not match</string>
    <string name="errVoidField">This field can not be blank</string>
    <string name="login_recoverPassword">Recover password</string>
    <string name="subject_manager_hintSubjectName">Subject name</string>
    <string name="subjectlist_noSubjects">No subjects to show, try create one :D</string>

    <string name="SubjectAdapter_state_0">Ignored</string>
    <string name="SubjectAdapter_state_1">Summarized</string>
    <string name="SubjectAdapter_state_2">To review</string>
    <string name="SubjectAdapter_state_3">Dominated</string>

    <string name="SubjectAdapter_task_state_0">Not completed</string>
    <string name="SubjectAdapter_task_state_1">Done</string>

    <string name="dashboard_callendar">Calendar</string>
    <string name="dashboard_organicer">Organicer</string>
    <string name="dashboard_today">Today</string>
    <string name="dashboard_subjects">Subjects</string>
    <string name="dashboard_tools">Tools</string>
    <string name="lorem" translatable="false">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="subject_manager_hintSubjectDate">Exam date</string>
    <string name="subject_manager_tv_selectcolor">Select subject color:</string>
    <string name="dashboard_topics">Topics</string>
    <string name="dashboard_notes">Notes</string>
    <string name="topic_item_state">State:</string>
    <string name="topicManager_topicNameHint">Topic name</string>
    <string name="topicManager_tv_selectState">Topic state:</string>
    <string name="topicManager_tv_SubjectOfTopic">Subject of topic</string>
    <string name="deleteTopic">Delete the topic</string>
    <string name="deleteTopicPrepo">from</string>
    <string name="topiclist_undotext">Restore the topic</string>
    <string name="topiclist_task_undotext">Restore the task</string>
    <string name="topicList_Restored">" has been sucefully restored"</string>
    <string name="logout">Logout</string>
    <string name="channel_name" translatable="false">Focus</string>
    <string name="channel_description" translatable="false">Focus description</string>
    <string name="SubjectInfoAddTaskHint">Add new task or topic...</string>
    <string name="subject_manager_tv_selectIcon">Select subject icon:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="verifyemail_tv">Please verify your email to continue.</string>
    <string name="verifyemail_code_hint">Verify code</string>
    <string name="verifyemail_verifybutton">Verify</string>
    <string name="verifyemail_resendmail">Resend email</string>
    <string name="verifyemail_btn_returnlogin">Return to login</string>
    <string name="err_verifyCode_notLenght">"Validation code lenght must be 8 characters "</string>
    <string name="subjectInfo_toast_topicCreated">Topic created sucefully.</string>
    <string name="topicInfo_tv_notes">Notes:</string>
    <string name="subjectInfo_cbx_isTask">Is a task?</string>
    <string name="topic_item_task_state_0">No finished</string>
    <string name="topic_item_task_state_3">Finished</string>
    <string name="topic_item_topic_state_0">Ignored</string>
    <string name="topic_item_topic_state_1">Read</string>
    <string name="topic_item_topic_state_2">Summarized</string>
    <string name="topic_item_topic_state_3">Dominated</string>
    <string name="topic_item_isTask">Task</string>
    <string name="topic_item_topic_priorityText">Priority:</string>
    <string name="subjectInfo_selectState">Select initial state:</string>
    <string name="subjectInfo_saveButton">Save</string>
    <string name="SubjectInfo_chxLow">Low</string>
    <string name="SubjectInfo_chxMed">Medium</string>
    <string name="SubjectInfo_chxHig">Hig</string>
    <string name="SubjectInfo_selectPriority">Select priority:</string>
    <string name="subjectManajer_cbx_makeEventCalendar">Make event in calendar</string>
    <string name="calendar_manage_hint_eventName">Event name</string>
    <string name="calendar_manage_hint_eventResume">Event resume</string>
    <string name="calendar_manage_tv_eventIcon">Icon:</string>
    <string name="calendar_manage_hint_eventNotes">Event notes</string>
    <string name="calendar_manage_cbx_eventAppNotify">Send me a notification</string>
    <string name="calendarManage_save">Save event</string>
    <string name="calendarManage_dontSave">Go back</string>
    <string name="calendar_manage_title">New event</string>
    <string name="loginFragment_switch_dontCloseSesion">Don´t close session</string>
    <string name="loginFragment_tv_bot_notMember">You are not a member?</string>
    <string name="LoginFragment_tv_Register">Register.</string>
    <string name="loginFragment_tv_needhelp">Need help?</string>
    <string name="loginFragment_tv_header_hello">Hello There!</string>
    <string name="loginFragment_loginButton">Login</string>
    <string name="welcomeFragment_welcomeText">Welcome!</string>
    <string name="welcomeFragment_tv_subHeader">Nice to see you again!</string>
    <string name="calendar_manage_update_title">Update event</string>
    <string name="calendar_manage_update_button">Update event</string>
    <string name="topicInfo_btn_UpdateTopic">Update topic</string>
    <string name="topicInfo_edHint_TopicName">Topic name</string>
    <string name="topicInfo_topic_percentText">Topic progress:</string>
    <string name="topicInfo_task_percentText">Task progress:</string>
    <string name="topicInfo_edHint_taskName">Task name</string>
    <string name="topicInfo_btn_UpdateTask">Update task</string>
    <string name="topicInfo_edHint_taskOrTopicName">Task or topic name</string>
    <string name="subjectList_menu_orderPercent">Order by total progress</string>
    <string name="subjectList_menu_orderDate">Order by exam date</string>
    <string name="subjectList_menu_orderName">Order by subject name</string>
    <string name="subjectInfo_menu_orderBy_priority">Order by priority</string>
    <string name="subjectInfo_menu_orderBy_state">Order by state</string>
    <string name="subjectInfo_menu_orderBy_name">Order by name</string>
    <string name="subjectInfo_menu_orderBy_task">Order by tasks</string>
    <string name="subjectList_deleteAlertDialogTitle">Delete subject</string>
    <string name="subjectList_deleteMessage_1">Are you sure that you want to delete the</string>
    <string name="subjectList_deleteMessage_2">subject and ALL the topics and works from it?</string>
    <string name="calendar_deleteAlertDialogTitle">Delete event</string>
    <string name="calendar_deleteMessage">Are you sure that you want to delete the event</string>
    <string name="calendarRestoreText">Restore the event</string>
    <string name="logoutText">Are you sure you want to log out?</string>
    <string name="tools_timer">Timer</string>
    <string name="tools_todoList">To-Do list</string>
    <string name="tools_countdownTimer">Countdown</string>
    <string name="tools_notes">Notes</string>
    <string name="tools_flashCards">Flashcards</string>
    <string name="tools_schedule">Schedule</string>
    <string name="notImplemented">Not implemented yet</string>
    <string name="loginFragment_tv_forgotPass">Forgot password?</string>
    <string name="recoverPass_btn_updatePassword">Update password</string>
    <string name="recoverPassword_btn_sendRecoverPassEmail">Send reset pass code</string>
    <string name="recoverPass_emailSendText">Email sended, check your inbox</string>
    <string name="recoverPass_failEmailSendText">Email not in database, make new account</string>
    <string name="recoverPass_passUpdated">Password updated!, try login now</string>
    <string name="recoverPass_failPassUpdated">Fail in update password. Maybe bad reset code?</string>
    <string name="recoverPass_title">Recover password</string>
</resources>
