<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.topicinfo.TopicInfoFragment" >


    <EditText
        android:id="@+id/topicInfo_ed_notes"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        android:maxLength="200"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/topicInfo_spinner_state"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/topicInfo_tv_notes"
        app:layout_constraintStart_toStartOf="@+id/topicInfo_checkBoxIsTask"
        app:layout_constraintTop_toBottomOf="@+id/topicInfo_spinner_state" />

    <Spinner
        android:id="@+id/topicInfo_spinner_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/topicInfo_checkBoxIsTask"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/topicInfo_checkBoxIsTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjectInfo_cbx_isTask"
        app:layout_constraintBottom_toBottomOf="@+id/topicInfo_spinner_state"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/topicInfo_spinner_state" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <CheckBox
            android:id="@+id/topicInfo_checkBoxHig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/checkbox_higpro_custom"
            android:checked="false"
            android:gravity="center"
            android:text="@string/SubjectInfo_chxHig" />

        <CheckBox
            android:id="@+id/topicInfo_checkBoxMed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/checkbox_midpro_custom"
            android:checked="false"
            android:gravity="center"
            android:text="@string/SubjectInfo_chxMed" />

        <CheckBox
            android:id="@+id/topicInfo_checkBoxLow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/checkbox_lowpro_custom"
            android:checked="false"
            android:gravity="center"
            android:text="@string/SubjectInfo_chxLow" />

    </LinearLayout>

    <Button
        android:id="@+id/topicInfo_btn_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/welcome_button"
        android:fontFamily="@font/regular"
        android:text="@string/topicInfo_btn_UpdateTopic"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicInfo_ed_notes" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topicInfo_ed_topicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/topicInfo_edHint_taskOrTopicName" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/topicInfo_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/topicInfo_tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/topicInfo_progress"
        app:layout_constraintStart_toStartOf="@+id/topicInfo_progress"
        app:layout_constraintTop_toBottomOf="@+id/topicInfo_progress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SubjectInfo_selectPriority"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/topicInfo_tv_progress" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/subjectInfo_selectState"
        app:layout_constraintEnd_toEndOf="@+id/topicInfo_spinner_state"
        app:layout_constraintStart_toStartOf="@+id/topicInfo_spinner_state"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>