<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verifyemail.VerifyEmailFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="169dp"
        android:layout_height="160dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verifyemail_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verifyEmail_til_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verifyEmail_tied_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/verifyemail_code_hint"
            android:maxLength="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/verifyEmail_til_code"
        app:layout_constraintStart_toStartOf="@+id/verifyEmail_til_code"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail_til_code">

        <Button
            android:id="@+id/verifyEmail_btn_resendEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/welcome_button"
            android:fontFamily="@font/regular"
            android:text="@string/verifyemail_resendmail"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3" />

        <Button
            android:id="@+id/verifyEmail_btn_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/welcome_button"
            android:fontFamily="@font/regular"
            android:text="@string/verifyemail_verifybutton"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/verifyEmail_btn_returnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:background="@drawable/welcome_button"
        android:fontFamily="@font/regular"
        android:text="@string/verifyemail_btn_returnlogin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>