<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:id="@+id/ivRegisterBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button_arrow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRegisterBackArrow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiedUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_userHint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/register_tilUser"
        app:layout_constraintStart_toStartOf="@+id/register_tilUser"
        app:layout_constraintTop_toBottomOf="@+id/register_tilUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiedEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_emailHint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/register_tilEmail"
        app:layout_constraintStart_toStartOf="@+id/register_tilEmail"
        app:layout_constraintTop_toBottomOf="@+id/register_tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_passwordHint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tilRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/register_tilPassword"
        app:layout_constraintStart_toStartOf="@+id/register_tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/register_tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiedConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirmPasswordHint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegitsterUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Button"
        android:background="@drawable/welcome_button"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tilRepeatPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>